--- a/config.yaml
+++ b/config.yaml
@@ -10,9 +10,9 @@ pygmentsCodeFencesGuessSyntax: yes
 enableEmoji: yes
 params:
   author: Lazar Jelic
-  avatarURL: images/avatar.jpg
+  avatarURL: images/avatar.jpeg
   colorScheme: auto
-  commit: https://github.com/luizdepra/hugo-coder/tree/
+  commit: https://github.com/luizdepra/hugo-coder/tree
   csp:
     childsrc: '''self'''
     connectsrc:
@@ -21,7 +21,7 @@ params:
     fontsrc:
       - '''self'''
       - https://fonts.gstatic.com
-      - https://cdn.jsdelivr.net/
+      - https://cdn.jsdelivr.net
     formaction: '''self'''
     framesrc: '''self'''
     imgsrc: '''self'''
@@ -34,53 +34,34 @@ params:
     stylesrc:
       - '''self'''
       - '''unsafe-inline'''
-      - https://fonts.googleapis.com/
-      - https://cdn.jsdelivr.net/
+      - https://fonts.googleapis.com
+      - https://cdn.jsdelivr.net
   customCSS: []
   customJS: []
   customSCSS: []
-  dateFormat: January 2, 2006
-  description: John Doe's personal website
+  dateFormat: September 4, 2021
+  description: Lazar Jelic's personal website
   enableTwemoji: no
-  footerContent: Enter a text here.
+  footerContent: Made with <3
   hideColorSchemeToggle: no
   hideCopyright: no
   hideCredits: no
   hideFooter: no
   info:
-    - Full Stack DevOps
-    - Magician
-  keywords: blog,developer,personal
+    - MAM 2022
+  keywords: blog, portfolio, personal
   maxSeeAlsoItems: 5
   rtl: no
   since: 2019
   social:
     - icon: fa fa-github
       name: Github
-      url: https://github.com/johndoe/
+      url: https://github.com/jelic98
       weight: 1
-    - icon: fa fa-gitlab
-      name: Gitlab
-      url: https://gitlab.com/johndoe/
-      weight: 2
-    - icon: fa fa-twitter
-      name: Twitter
-      url: https://twitter.com/johndoe/
-      weight: 3
     - icon: fa fa-linkedin
       name: LinkedIn
-      url: https://www.linkedin.com/in/johndoe/
+      url: https://www.linkedin.com/in/jelic98
       weight: 4
-    - icon: fa fa-medium
-      name: Medium
-      url: https://medium.com/@johndoe
-      weight: 5
-    - icon: fa fa-rss
-      name: RSS
-      rel: alternate
-      type: application/rss+xml
-      url: https://myhugosite.com/index.xml
-      weight: 6
 taxonomies:
   author: authors
   category: categories
@@ -94,35 +75,9 @@ languages:
         - name: About
           url: about/
           weight: 1
-        - name: Blog
-          url: posts/
-          weight: 2
         - name: Projects
           url: projects/
           weight: 3
         - name: Contact me
           url: contact/
           weight: 5
-  pt-br:
-    languageName: ':brazil:'
-    menu:
-      main:
-        - name: Sobre
-          url: about/
-          weight: 1
-        - name: Blog
-          url: posts/
-          weight: 2
-        - name: Projetos
-          url: projects/
-          weight: 3
-        - name: Contato
-          url: contact/
-          weight: 5
-    params:
-      author: João Ninguém
-      description: Sítio pessoal de João Ninguém
-      footerContent: Coloque algum texto aqui.
-      info: Full Stack DevOps e Mágico
-      keywords: blog,desenvolvedor,pessoal
-    title: João Ninguém
