--- a/config.yaml
+++ b/config.yaml
@@ -54,14 +54,15 @@ params:
   rtl: no
   since: 2021
   social:
+    - icon: fa fa-globe
+      name: Website
+      url: https://lazarjelic.com
     - icon: fa fa-github
       name: Github
       url: https://github.com/jelic98
-      weight: 1
     - icon: fa fa-linkedin
       name: LinkedIn
       url: https://www.linkedin.com/in/jelic98
-      weight: 4
 taxonomies:
   author: authors
   category: categories
@@ -74,5 +75,5 @@ languages:
       main:
         - name: Projects
           url: projects/
-        - name: Contact me
+        - name: Contact
           url: contact/
