--- a/config.yaml
+++ b/config.yaml
@@ -42,7 +42,7 @@ params:
   dateFormat: September 4, 2021
   description: Lazar Jelic's portfolio
   enableTwemoji: no
-  footerContent: Made with :heart:
+  footerContent: Made with <3 
   hideColorSchemeToggle: no
   hideCopyright: no
   hideCredits: no
